# Karma

./: .dockerignore  .env.example  .env.testnet.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  Makefile  NOTICE  OPEN_SOURCE_ACKNOWLEDGEMENTS.md  OPEN_SOURCE_NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_COMPONENTS.md  TRADEMARK_POLICY.md  VISIBILITY_MAP.md  abis.json  alembic.ini  deployment.json  fly.toml  foundry.toml  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  railway.toml  requirements-bff.txt  requirements-testnet.txt  run-demo.sh
.github/: CODEOWNERS  pull_request_template.md
abi/: KarmaNonCustodial.json  KarmaSettlementEngine.json
api/: app.py
apps/: __init__.py
audits/: 2026-05-12_security-audit.md
cache/: solidity-files-cache.json  test-failures
certora/: FIXLIST.md  README.md  修复清单.txt
config/: settings.py
contracts/: KarmaAttestationGateway.sol  README.md  VerifierRegistry.sol
core/: mvvs_schemas.py  schemas.py
db/: session.py
decentralized_verifier/: __init__.py  models.py  publisher.py  schemas.py  tasks.py
deploy/: .env.example  .env.local-eip712.example  .env.local-openclaw.example  .env.local-x402-sepolia.example  .env.paas.example  .env.testnet-claw-manus.example  .env.testnet-stack.example  Dockerfile.api  Dockerfile.paas  TESTNET_STACK-zh.md  docker-compose.testnet.yml  docker-compose.yml  one-click-deploy.md  prometheus.yml  sepolia_bilateral_deployment.json  sepolia_deployment.json  sepolia_multisig_deployment.json
docker/: .env.example  Dockerfile.karma-bff  README.md  docker-compose.example.yml  docker-compose.karma-bff.yml  nginx-default.conf
docs/: AGENT_GUARD_SECURITY_HARDENING.md  AGENT_INTEGRATION.md  AGENT_PAYMENT_PROTOCOL_EXECUTION_PLAN_CN.txt  AGENT_SAFETY_GUARDIAN_V01.md  AP2_EVIDENCE_PROFILE-zh.md  API_AUTH.md  API_REFERENCE.md  API_ROADMAP_V01.md  COMMANDS.md  CONSOLE_PHASE1_TRADITIONAL_PREAUTH-zh.md  DEVELOPER_EXECUTION_PLAN.md  DISPUTE_FLOW_PUBLIC.md  ECOSYSTEM_SDK_DEPLOYMENT.md  EVIDENCE_BUNDLE_STANDARD.md  EVIDENCE_SCHEMA_V01.md  EXECUTION_RECEIPT_STANDARD.md  EXECUTION_RECEIPT_STANDARD_V2.md  FOCUS_ROADMAP.md  (+91 more)
karma-final/karma-private/: .env.private.example  README.md  main.py  pyproject.toml
karma-final/karma-private/api/: app.py
karma-final/karma-private/config/: settings.py
karma-final/karma-private/core/: schemas.py
karma-final/karma-private/core/arbitration/: engine.py
karma-final/karma-private/core/audit/: trail.py
karma-final/karma-private/core/behavior/: analyzer.py
karma-final/karma-private/core/fraud/: detector.py
karma-final/karma-private/core/reputation/: in_memory_store.py  pg_store.py  system.py
karma-final/karma-private/core/risk/: scorer.py
karma-final/karma-private/core/settlement/: state_machine.py
karma-final/karma-private/core/verification/: engine.py
karma-final/karma-private/db/stores/: private_stores.py
karma-final/karma-private/deploy/: Dockerfile.runtime  docker-compose.private.yml
karma-final/karma-private/docs/: OPS_SOP.md
karma-final/karma-private/tests/: conftest.py  test_audit_trail_private.py  test_verification_private.py
(+917 files in other folders)
