[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "karma-trust-protocol"
version = "0.1.0"
description = "Karma Trusted Agent Runtime — Public SDK & API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Redis
    "redis[asyncio]>=5.0.0",

    # Object storage
    "minio>=7.2.0",
    "boto3>=1.34.0",

    # Agent / LLM
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Web3 / chain
    "web3>=6.15.0",
    "eth-account>=0.11.0",

    # Crypto / signing
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Task queue
    "celery[redis]>=5.4.0",

    # Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
karma-api     = "api.app:app"
karma-worker  = "worker.tasks:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*", "api*", "config*", "core*",
    "db*", "sdk*", "services*", "worker*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
