[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "karma-runtime-private"
version = "0.1.0"
description = "Karma Private Runtime — Internal decision engines"
requires-python = ">=3.11"

dependencies = [
    # Shares public SDK as editable install (installed separately)
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Crypto
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*", "core*", "db*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
